Test Potential Server Functionality