@@ -1,19 +1,16 @@
 package mainapp;
 
+import org.zeromq.ZMQ;
+
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
 import javafx.scene.layout.Pane;
 import javafx.stage.Stage;
-import server_comm.Client;
-import server_comm.Server;
-import org.zeromq.ZMQ;
-import org.zeromq.ZMQ.Context;
 
 public class MightyVocabApplication extends Application {
-//vm arguments: --module-path "${eclipse_home}/javafx-sdk-18.0.2/lib" --add-modules javafx.controls,javafx.fxml
 
-	private static final String SERVER_PATH = "../../../server/main.py";
+	// private static final String SERVER_PATH = "../../../server/main.py";
 
 	@Override
 	public void start(Stage primaryStage) {
@@ -28,13 +25,10 @@ public class MightyVocabApplication extends Application {
 		} catch (Exception ex) {
 			ex.printStackTrace();
 		}
-		
-		Server server = new Server();
-		Client client = new Client();
-		
-		server.start();
-		client.start();
-		
+
+		// Client client = new Client();
+		// client.start();
+
 		System.out.println(ZMQ.CHARSET);
 	}
 
